--- a/Frontend/.env
+++ b/Frontend/.env
@@ -5,4 +5,4 @@ JWT_SECRET=mystrongsecretkey123
 EMAIL_USER=vishwayishwaranwork@gmail.com
 EMAIL_PASS=dbjb uczk bqjy pehk
 
-VITE_BASE_URL=http://localhost:5000
+VITE_BASE_URL=https://techzone-pxi4.onrender.com
