--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "vite": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -34,7 +35,6 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "globals": "^15.14.0"
   }
 }
