--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "vite": "^6.1.0"
   },
   "devDependencies": {
+    "vite": "^6.1.0",
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
