--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,11 +23,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "zustand": "^5.0.3",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "vite": "^6.1.0",
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -36,6 +35,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0"
+    "globals": "^15.14.0",
+    "postcss": "^8.5.3",
+    "vite": "^6.1.0"
   }
 }
