--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,8 +1,13 @@
 {
     "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
+    ],
+    "headers": [
       {
-        "source": "/(.*)",
-        "destination": "/index.html"
+        "source": "/assets/(.*).js",
+        "headers": [
+          { "key": "Content-Type", "value": "application/javascript" }
+        ]
       }
     ]
   }
