--- a/Backend/.env
+++ b/Backend/.env
@@ -1,8 +1,8 @@
-MONGO_URI=mongodb+srv://vishwayishwaran:SvAB5a0VC8piBQxn@cluster0.gitem.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://vishwayishwaran:JW1daO25nSNkMBAi@cluster0.70q7g6u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=mystrongsecretkey123
 
 EMAIL_USER=vishwayishwaranwork@gmail.com
 EMAIL_PASS=dbjb uczk bqjy pehk
 
-REACT_APP_BASE_URL=http://localhost:5000
+REACT_APP_BASE_URL=http://localhost:5000  
