--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://vishwayishwaran:<db_password>@cluster0.70q7g6u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://vishwayishwaran:JW1daO25nSNkMBAi@cluster0.70q7g6u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mystrongsecretkey123
 
 EMAIL_USER=vishwayishwaranwork@gmail.com
